src/styles/screen.scss
#screen{
    color: #fff;

    display: flex;
    align-items: center;
    justify-content: center;
    flex: 1;
    flex-direction: column;
    position: relative;

    #last-operation{
        position: absolute;
        text-align: end;
        width: 90%;
        top: 30px;
    }

    .positionActive{
        border: 1px solid #2200FF;
        border-radius: 10px;
    }

    .text-container{
        width: 90vw;
        height: 100%;
        display: flex;
        flex-wrap: wrap;
        justify-content: center;
        align-items: center;

        font-size: 60px;

        div{
            //disable text selection
            -moz-user-select: none;
            -khtml-user-select: none;
            -webkit-user-select: none;
            -ms-user-select: none;
            user-select: none;

            height: 80px;
            min-width: 80px;
            
            display: flex;
            justify-content: center;
            padding: 5px;

            transition: font-size 0.2s ease-in-out;

            &:active{
                font-size: 75px;
            }
        }
    }

    padding: 10px 30px;

}


@media(min-width: 769px){
    #screen{

        padding: 10px 0px;
        display: flex;

        .text-container{
            display: flex;
            align-items: center;

            height: 200px;

            overflow-y: auto;
            
            text-align: center;
            font-size: 50px;
        }
    }
       
}

